# unruggable-app

./: .gitignore  BROWSER_BRIDGE_TESTING.md  Cargo.toml  Cross.toml  DAPP_INTEGRATION_TEST.md  Dioxus.toml  README.md  TRANSACTION_FLOW.md  android_build.sh  dioxus-docs.md  generate_icons.sh  generate_tokens.sh  macos_package.sh  makefile.toml  privacy-policy.md  stash_header_price_change.txt  structure.txt  swap_modal_instructions.rs  testflight.sh  unruggable.dmg.sha256
assets/: liquid_metal_border.js  liquid_metal_circle.js  liquid_metal_circle_border.js  liquid_metal_component.js  liquid_metal_svg.js  liquid_metal_text.js  main.css  pin-premium.css  pin-styles.css  swap_modal_css  tokens.json  tokens_fl.json  validators.json
assets/icons/: icon.icns
custom/: AndroidManifest.xml
extension/: POPUP_UI.md  README.md  README_MVP_STATUS.md  background.js  content.js  inject.js  manifest.json  popup.css  popup.html  popup.js  test.html  update_logo.sh  wallet-standard-impl.js  wallet-standard.js  wallet-test.html
res/xml/: device_filter.xml
scripts/: android.build.sh  android.bundle.sh  android.env  android.github.sh  android.update.sh  build_openssl_android_ci.sh  build_openssl_android_local.sh
src/: currency.rs  currency_utils.rs  domain_resolver.rs  main.rs  pin.rs  prices.rs  privacycash.rs  rpc.rs  sns.rs  staking.rs  storage.rs  timeout.rs  token_utils.rs  transaction.rs  unstaking.rs  validators.rs  wallet.rs
src/ans_resolver/: constants.rs  mod.rs  pda.rs  state.rs
src/bonk_staking/: client.rs  mod.rs  types.rs
src/bridge/: handler.rs  mod.rs  protocol.rs  server.rs
src/carrot/: client.rs  mod.rs  types.rs
src/components/: address_input.rs  background_themes.rs  calypso.rs  common.rs  liquid_metal_button.rs  mod.rs  onboarding.rs  pin_input.rs  pin_unlock.rs  wallet_view.rs
src/components/modals/: background_modal.rs  bonk_staking_modal.rs  bridge_sign_modal.rs  bulk_send_modal.rs  carrot_modal.rs  currency_modal.rs  delete_wallet_modal.rs  eject_modal.rs  export_wallet_modal.rs  hardware_modal.rs  jito_modal.rs  lend_modal.rs  mod.rs  privacycash_modal.rs  quantum_vault_modal.rs  receive_modal.rs  retire_modal.rs  rpc_modal.rs  send_modal.rs  send_token_modal.rs  squads_modal.rs  stake_modal.rs  swap_modal.rs  transaction_history_modal.rs  wallet_modal.rs
src/config/: mod.rs  tokens.rs
src/hardware/: android_usb.rs  ledger.rs  mod.rs  protocol.rs  serial.rs
src/quantum_vault/: client.rs  mod.rs  storage.rs  types.rs
src/signing/: hardware.rs  mod.rs  software.rs
src/squads/: client.rs  mod.rs  types.rs
src/titan/: client.rs  codec.rs  mod.rs  transaction_builder.rs  types.rs
tools/: make-entitlements.sh  package-for-testflight.sh  run-ios-device.sh
