[package]
name = "unruggable"
version = "0.1.0"
authors = ["hogyzen12 <billypapas12@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
ed25519-dalek = "2.1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
solana-sdk = "2.1"
solana-client = { version = "2.1", optional = true }
openssl = { version = "0.10", features = ["vendored"] }
bincode = "1.3"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
sha2 = "0.10"
async-trait = "0.1"
serialport = "4.3.0"
tokio-serial = "5.4.4"
log = "0.4"
lazy_static = "1.5.0"
qrcode = "0.14"
image = { version = "0.24", default-features = false }
chrono = "0.4"
hex = "0.4"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
android_logger = "0.13"
rusqlite = { version = "0.29", features = ["bundled"] }
jni = "0.21"
ndk-context = "0.1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
