[package]
name = "unruggable"
version = "0.1.0"
authors = ["hogyzen12 <billypapas12@gmail.com>"]
edition = "2021"

[dependencies]
# Core dependencies for all platforms
#ALPHA - passing all builds & bundles + device deployment
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "f9e7011",  features = ["mobile", "router"] }
#FFI local/custom
#dioxus = { git = "https://github.com/hogyzen12/dioxus", rev = "120eca1", features = ["router"] }
#STABLE - fails android
#dioxus = { version = "0.6.3", features = ["fullstack","router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
solana-sdk = "2.3.1"
solana-stake-interface = { version = "1.2.0", features = ["bincode"] }
solana-account-decoder = "2.2"
openssl = { version = "0.10", features = ["vendored"] }
bincode = "1.3"
base64 = "0.22"
tokio = { version = "1.45.1", features = ["time"] }
sha2 = "0.10"
async-trait = "0.1"
log = "0.4"
lazy_static = "1.5.0"
qrcode = "0.14"
image = { version = "0.24", default-features = false }
chrono = "0.4"
hex = "0.4"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
solana-client = "2.3.2"

# Desktop/non-mobile specific dependencies
[target.'cfg(not(any(target_os = "android")))'.dependencies]
# Add full§stack feature only for non-mobile platforms
serialport = "4.3.0"
tokio-serial = "5.4.4"
arboard = "3.2"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21.1"
anyhow = "1.0.98"
async-channel = "2.3.1"
once_cell = "1.21.3"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[package.metadata.bundle]
name = "unruggable"             # keeps your .app path as .../unruggable.app
identifier = "com.unruggable.app"   # ← MUST match your provisioning profile's App ID
resources = ["assets/**/**"]
icon = ["assets/icon.png"]
category = "Utility"
short_description = "unruggable"
long_description = """
unruggable for iphone.
"""
osx_frameworks = ["WebKit"]

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
