[package]
name = "unruggable"
version = "0.1.0"
authors = ["hogyzen12 <billypapas12@gmail.com>"]
edition = "2021"

[dependencies]
# Core dependencies for all platforms
#EDGE
#dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "a8230d8", features = ["fullstack", "mobile", "router"] }
#ALPHA - passing all builds & bundles + device deployment
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "da72b63",  features = ["fullstack", "mobile", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
solana-sdk = "3.0.0"
solana-system-interface = "2.0"
solana-stake-interface = { version = "2.0", features = ["bincode"] }
solana-compute-budget-interface = "2.0"
solana-instruction = "2.0"
solana-pubkey = "2.0"
solana-account-decoder = "3.0.0"
openssl = { version = "0.10", features = ["vendored"] }
bincode = "1.3"
base64 = "0.22"
tokio = { version = "1.47.1", features = ["full"] }
# Use native-tls for iOS (uses iOS Security framework), rustls for other platforms
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
rmp-serde = "1.1"
sha2 = "0.10"
async-trait = "0.1"
log = "0.4"
lazy_static = "1.5.0"
# PIN encryption dependencies
aes-gcm = "0.10"
pbkdf2 = "0.12"
qrcode = "0.14"
image = { version = "0.24", default-features = false }
chrono = "0.4"
hex = "0.4"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-client = "3.0.0"
server_fn_macro_default = "0.8.3"
# Temporarily commented out for Solana 3.x testing (these depend on Solana 2.x)
# squads-v4-client = "0.1.0"
# carrot-sdk = "0.1.0"
# bonk-staking-rewards = "0.1.0"
borsh = "1.5.7"
solana-winternitz = "0.1.0"
web-sys = { version = "0.3", features = ["Window", "Storage", "Performance"] }
yellowstone-jet-tpu-client = "0.1.0-rc4"

# Desktop/non-mobile specific dependencies
[target.'cfg(not(any(target_os = "android")))'.dependencies]
# Add full§stack feature only for non-mobile platforms
serialport = "4.3.0"
tokio-serial = "5.4.4"
arboard = "3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
solana-remote-wallet = "2.3.7"
solana-offchain-message = "2.2.1"
solana-derivation-path = "2.2.1"
hidapi = "2.6.3"
parking_lot = "0.12"
#dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "f9e7011", default-features = false}
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "da72b63", default-features = false}


# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21.1"
anyhow = "1.0.98"
async-channel = "2.3.1"
once_cell = "1.21.3"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[package.metadata.bundle]
name = "unruggable"             # keeps your .app path as .../unruggable.app
identifier = "com.unruggable.app"   # ← MUST match your provisioning profile's App ID
resources = ["assets/**/**"]
icon = ["assets/icon.png"]
category = "Utility"
short_description = "unruggable"
long_description = """
unruggable for iphone.
"""
#Comment this out for desktop builds
#osx_frameworks = ["WebKit"]

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
